# com.jomi.discord.sdPlugin

./: .gitignore  README.md  manifest.json
.github/workflows/: build.yml
imgs/: category-icon  plugin-icon  voice-action  voice-key
native/: Cargo.toml
native/src/: discord_rpc.rs  main.rs  models.rs  stream_deck.rs
scripts/: build-linux.sh  build-windows.ps1
ui/: screenshare.html  screenshare.js  soundboard.html  soundboard.js  voice-channel.html  voice-channel.js
