[package]
name = "discord_client_controls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "io-util", "process", "sync", "time"] }
tokio-tungstenite = "0.28"
uuid = { version = "1.18", features = ["v4", "serde"] }
